force-app/main/default/objects/AC_Work_Order__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>