force-app/main/default/objects/AC_Work_Order__c/fields/Estimated_Duaration_minutes__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Duaration_minutes__c</fullName>
    <label>Estimated Duaration (minutes)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>