force-app/main/default/objects/AC_Work_Order__c/fields/Service_Level_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Service_Level_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Level Agreement</label>
    <referenceTo>AC_SLA__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>