force-app/main/default/objects/AC_Work_Order__c/fields/Work_Site__c.field-meta.xml
<CustomField>
    <fullName>Work_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Site Work Orders</relationshipLabel>
    <relationshipName>Site_Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>