force-app/main/default/objects/AC_Work_Order__c/fields/Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Type</label>
    <referenceTo>AC_Work_Type__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>